// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Apps 1`] = `
.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c6:hover,
.c6:focus {
  background: rgba(255,255,255,0.07);
}

.c6:active {
  background: rgba(255,255,255,0.13);
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th svg {
  height: 12px;
}

.c1 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c5:hover {
  background-color: rgba(255,255,255,0.13);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Description
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c4"
            >
              <div
                class="c5"
                kind="secondary"
              >
                aws_account_id: A1234
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c6"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Databases 1`] = `
.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c6:hover,
.c6:focus {
  background: rgba(255,255,255,0.07);
}

.c6:active {
  background: rgba(255,255,255,0.13);
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th svg {
  height: 12px;
}

.c1 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c5:hover {
  background-color: rgba(255,255,255,0.13);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Description
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Type
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            aurora
          </td>
          <td>
            PostgreSQL 11.6: AWS Aurora 
          </td>
          <td>
            RDS PostgreSQL
          </td>
          <td>
            <div
              class="c4"
            >
              <div
                class="c5"
                kind="secondary"
              >
                cluster: root
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c6"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Desktops 1`] = `
.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c6:hover,
.c6:focus {
  background: rgba(255,255,255,0.07);
}

.c6:active {
  background: rgba(255,255,255,0.13);
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th svg {
  height: 12px;
}

.c1 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c5:hover {
  background-color: rgba(255,255,255,0.13);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            host.com
          </td>
          <td>
            bb8411a4-ba50-537c-89b3-226a00447bc6
          </td>
          <td>
            <div
              class="c4"
            >
              <div
                class="c5"
                kind="secondary"
              >
                foo: bar
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c6"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Kubes 1`] = `
.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c6:hover,
.c6:focus {
  background: rgba(255,255,255,0.07);
}

.c6:active {
  background: rgba(255,255,255,0.13);
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th svg {
  height: 12px;
}

.c1 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c5:hover {
  background-color: rgba(255,255,255,0.13);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            tele.logicoma.dev-prod
          </td>
          <td>
            <div
              class="c4"
            >
              <div
                class="c5"
                kind="secondary"
              >
                env: prod
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c6"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Nodes 1`] = `
.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c6:hover,
.c6:focus {
  background: rgba(255,255,255,0.07);
}

.c6:active {
  background: rgba(255,255,255,0.13);
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th svg {
  height: 12px;
}

.c1 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c5:hover {
  background-color: rgba(255,255,255,0.13);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Hostname
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            fujedu
          </td>
          <td>
            172.10.1.20:3022
          </td>
          <td>
            <div
              class="c4"
            >
              <div
                class="c5"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c6"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Roles 1`] = `
.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c4:hover,
.c4:focus {
  background: rgba(255,255,255,0.07);
}

.c4:active {
  background: rgba(255,255,255,0.13);
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th svg {
  height: 12px;
}

.c1 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Role Name
              <span
                class="c3 icon icon-chevronup"
                title="sort items asc"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            role1
          </td>
          <td
            align="right"
          >
            <button
              class="c4"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
        <tr>
          <td>
            role2
          </td>
          <td
            align="right"
          >
            <button
              class="c4"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render UserGroups 1`] = `
.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c6:hover,
.c6:focus {
  background: rgba(255,255,255,0.07);
}

.c6:active {
  background: rgba(255,255,255,0.13);
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c1 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c1 > thead > tr > th,
.c1 > tbody > tr > th,
.c1 > tfoot > tr > th,
.c1 > thead > tr > td,
.c1 > tbody > tr > td,
.c1 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c1 > thead > tr > th:first-child,
.c1 > tbody > tr > th:first-child,
.c1 > tfoot > tr > th:first-child,
.c1 > thead > tr > td:first-child,
.c1 > tbody > tr > td:first-child,
.c1 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c1 > thead > tr > th:last-child,
.c1 > tbody > tr > th:last-child,
.c1 > tfoot > tr > th:last-child,
.c1 > thead > tr > td:last-child,
.c1 > tbody > tr > td:last-child,
.c1 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c1 > tbody > tr > td {
  vertical-align: middle;
}

.c1 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c1 > thead > tr > th svg {
  height: 12px;
}

.c1 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c1 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c1 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c5:hover {
  background-color: rgba(255,255,255,0.13);
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c0.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1 c2"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Description
              <span
                class="c3 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            group id 1
          </td>
          <td>
            user group
          </td>
          <td>
            <div
              class="c4"
            >
              <div
                class="c5"
                kind="secondary"
              >
                env: prod
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c6"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
        <tr>
          <td>
            group id 2
          </td>
          <td>
            admin group
          </td>
          <td>
            <div
              class="c4"
            >
              <div
                class="c5"
                kind="secondary"
              >
                env: dev
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c6"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
